<resources>
    <string name="app_name">TRICOOPARK</string>

    <!--General-->
    <string name="logo">logo</string>
    <string name="nombre_empresa">TRICOOPARK®</string>


    <!--Landing Page-->
    <string name="txt_reclamo">La mejor decisión para tu patinete eléctrico</string>
    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="btn_registro">Registrarse</string>

    <!--Registrarse y iniciar Sesion-->
    <string name="et_usuario">Nombre usuario</string>
    <string name="et_email">Email</string>
    <string name="et_contraseña">Contraseña</string>
    <string name="bt_google">Registrarse con Google</string>
    <string name="et_MensajeInicioSesion">¿Ya tienes cuenta?</string>
    <string name="et_MensajeCuentaLink">Inicia sesión</string>
    <string name="et_MensajeRegistro">¿Todavía no tienes cuenta?</string>
    <string name="et_MensajeRegistroLink">Regístrate</string>
</resources>