<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/boton_registro"
        android:fontFamily="@font/poppins_medium"
        android:onClick="SignUp"
        android:shadowColor="#040404"
        android:text="@string/btn_registro"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciarSesion" />

    <TextView
        android:id="@+id/txt_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nombre_empresa"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/txt_reclamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/txt_reclamo"
        android:textColor="#9c9c9c"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_empresa" />

    <Button
        android:id="@+id/btn_iniciarSesion"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/boton_iniciosesion"
        android:fontFamily="@font/poppins_medium"
        android:onClick="SignIn"
        android:text="@string/btn_iniciarSesion"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reclamo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>