<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignUp" >

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="354dp"
        android:background="@drawable/forma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_iniciarSesion"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view3"
        android:layout_width="272dp"
        android:layout_height="211dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/formulario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="196dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/et_usuario"
        android:inputType="textPersonName"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/et_nombre"
        app:layout_constraintStart_toEndOf="@+id/et_nombre"
        app:layout_constraintTop_toTopOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="196dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/et_contraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:src="@android:drawable/ic_lock_idle_lock"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/boton_iniciosesion"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_iniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/et_MensajeRegistro"
        android:textColor="#959595"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/poppins_light"
        android:onClick="SignUp"
        android:text="@string/et_MensajeRegistroLink"
        android:textColor="#757373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

</androidx.constraintlayout.widget.ConstraintLayout>